<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.falchus</groupId>
  <artifactId>lib-java</artifactId>
  <version>1.1.5</version>
  
  <properties>
  	<maven.compiler.source>17</maven.compiler.source>
  	<maven.compiler.target>17</maven.compiler.target>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <repositories>
  	<repository>
  		<id>spigotmc-repo</id>
  		<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
  	</repository>
  	<repository>
  		<id>cs-arcanearts</id>
  		<url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
  	</repository>
  </repositories>
  
  <distributionManagement>
  	<repository>
  		<id>github</id>
  		<name>GitHub Falchus Apache Maven Packages</name>
  		<url>https://maven.pkg.github.com/Falchus/FalchusLib-Java</url>
  	</repository>
  </distributionManagement>
  
  <dependencies>
  	<dependency>
  		<groupId>org.projectlombok</groupId>
  		<artifactId>lombok</artifactId>
  		<version>1.18.42</version>
  		<scope>provided</scope>
  	</dependency>
  
  	<dependency>
		<groupId>net.md-5</groupId>
		<artifactId>bungeecord-api</artifactId>
		<version>1.21-R0.4</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.bukkit.craftbukkit</groupId>
		<artifactId>1.8.8</artifactId>
		<version>1.8.8</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.spigotmc</groupId>
		<artifactId>spigot-api</artifactId>
		<version>1.8.8-R0.1-SNAPSHOT</version>
		<scope>provided</scope>
	</dependency>
	
	<dependency>
		<groupId>net.luckperms</groupId>
		<artifactId>api</artifactId>
		<version>5.5</version>
		<scope>provided</scope>
	</dependency>
  
	<dependency>
		<groupId>eu.cloudnetservice.cloudnet</groupId>
		<artifactId>bridge-impl</artifactId>
		<version>4.0.0-RC14</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>eu.cloudnetservice.cloudnet</groupId>
		<artifactId>driver-api</artifactId>
		<version>4.0.0-RC14</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>eu.cloudnetservice.cloudnet</groupId>
		<artifactId>driver-impl</artifactId>
		<version>4.0.0-RC14</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>eu.cloudnetservice.cloudnet</groupId>
		<artifactId>wrapper-jvm-api</artifactId>
		<version>4.0.0-RC14</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>eu.cloudnetservice.cloudnet</groupId>
		<artifactId>common</artifactId>
		<version>4.0.0-RC11.2</version>
		<scope>provided</scope>
	</dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <includes>
        	<include>plugin.yml</include>
        	<include>bungee.yml</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
        <filtering>true</filtering>
      </resource>
    </resources>
    <finalName>FalchusLib</finalName>
    <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.14.1</version>
			<configuration>
				<annotationProcessorPaths>
					<path>
						<groupId>org.projectlombok</groupId>
						<artifactId>lombok</artifactId>
						<version>1.18.42</version>
					</path>
				</annotationProcessorPaths>
			</configuration>
		</plugin>
    </plugins>
  </build>
</project>